--- a/app/stylesheets/user.scss
+++ b/app/stylesheets/user.scss
@@ -5,18 +5,17 @@ div.filter ul{
   @include roundedTop;
   margin-left:-20px;
   @include roundedBottom;
-  background-color: $blueMedium;
+  background-color: $darkGrey;
   padding-top: 12px;
 	  }
-  li.active {margin-left:20px; background-color: $orange; a {color:white; font-weight:bold;}}   
+  li.active {margin-left:20px; background-color: $orangeRed; a {color:white; font-weight:bold;}}   
 }
 div#userForm form {
   @include grid(88,0,0,1,1);
   @include rounded;
-  background-color: $blueLighter;
-  border-top:5px;
-  border-color:$orange;
-  border-style:solid;
+  background-color: $yellow;
+  border: 1px solid grey;
+  border-top:5px solid $orangeRed;
   form { background-color: transparent ;}
   padding-top: 10px;
   padding-bottom: 10px;
@@ -25,7 +24,7 @@ div#userForm form {
   h2 {padding: 0px 0px 10px 10px; font-weight:bold;}
   label { margin-bottom: 5px; }
   dl {
-    background-color: $blueLighter;
+    background-color: $yellow;
 	padding-left:33px;
     dt {
       @include grid(12,0,1);
@@ -55,7 +54,6 @@ div#users {
 div#holidayForm form {
   @include grid(88,0,0,1,1);
   @include rounded;
-  background-color: $blueLight;
   form { background-color: transparent ;}
   padding-top: 10px;
   padding-bottom: 10px;
@@ -64,7 +62,7 @@ div#holidayForm form {
   h2 { color: $orange; margin-bottom: 10px;}
   label { margin-bottom: 5px; }
   dl {
-    background-color: $blueLight;
+    background-color: white;
     dt {
       @include grid(13,0,1);
       text-align: left;
@@ -94,7 +92,7 @@ div#sequences {
   div.user, div.holidays {
     margin-bottom: 3px;
     div.record {
-      background-color: $blueLight;
+     /* background-color: $blueLight;*/
       @include roundedBottom;
       padding: 10px;
       dd {
