--- a/app/views/users/registrations/edit.html.haml
+++ b/app/views/users/registrations/edit.html.haml
@@ -3,9 +3,9 @@
   = devise_error_messages!
   %dl
     %dt= f.label :firstname
-    %dd= f.email_field :firstname
+    %dd= f.text_field :firstname
     %dt= f.label :lastname
-    %dd= f.email_field :lastname
+    %dd= f.text_field :lastname
     %dt= f.label :email
     %dd= f.email_field :email
     %dt= f.label :password, "New Password"
