--- a/app/views/works/index.html.haml
+++ b/app/views/works/index.html.haml
@@ -2,11 +2,12 @@
   = render :partial => "calendar"
 #formWrapper
   = render :partial => "form"
-%ul.toolbar
-  %li.time Time
-  %li.duration Duration
-  %li.project Project
-  %li.customer Customer
-  %li.description Description
+.toolbar
+  %ul
+    %li.time Time
+    %li.duration Duration
+    %li.project Project
+    %li.customer Customer
+    %li.description Description
 #works
   = render :partial => "worklist"
