--- a/app/views/works/_form.html.haml
+++ b/app/views/works/_form.html.haml
@@ -7,10 +7,10 @@
 #createTimeWrapper
   = form_for(@work, :remote => false) do |f|
     %dl
-      %dt.time= f.label :start, "Start:"
-      %dd.time= f.text_field :start, :size => 4, :value => "08:00"
-      %dt.time= f.label :end, "End:"
-      %dd.time= f.text_field :end, :size => 4, :value => "09:00"
+      %dt.time= f.label :started_at, "Start:"
+      %dd.time= f.text_field :started_at, :size => 4, :value => "08:00"
+      %dt.time= f.label :ended_at, "End:"
+      %dd.time= f.text_field :ended_at, :size => 4, :value => "09:00"
       %dd.description= f.text_area :description
       %dt.submit
         = f.hidden_field :project_id, :value => @projects.first.id
