--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html{ :xmlns => "http://www.w3.org/1999/xhtml", :lang => "en", "xml:lang" => "en"}
   %head
     %meta{"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8"}
-    %title Nancy / #{controller.controller_name}
+    %title Nancy / #{controller.controller_name} / #{t :hello}
     = stylesheet_link_tag("compiled/screen.css")
     = stylesheet_link_tag("compiled/#{controller.controller_name}") if File.exist?("tmp/stylesheets/compiled/#{controller.controller_name}.css")
     = javascript_include_tag :defaults
