--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,7 @@
     = javascript_include_tag :defaults
     = stylesheet_link_tag :all
     = csrf_meta_tag
-  %body{:id => "#{controller.controller_name}"}
+  %body{:id => "#{controller.controller_name}", :class => "claro"}
     #bodyGradient
       #navigation
         .container
