--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,7 @@
     %title Nancy / #{controller.controller_name} / #{t :hello}
     = stylesheet_link_tag("compiled/screen.css")
     = stylesheet_link_tag("compiled/#{controller.controller_name}") if File.exist?("tmp/stylesheets/compiled/#{controller.controller_name}.css")
+    %script{:src => "http://ajax.googleapis.com/ajax/libs/dojo/1.6/dojo/dojo.xd.js", "djConfig" => "parseOnLoad: true"}
     = javascript_include_tag :defaults
     = stylesheet_link_tag :all
     = csrf_meta_tag
