Replace background of submit buttons with css-styled fancy-buttons

--- a/app/stylesheets/customers.scss
+++ b/app/stylesheets/customers.scss
@@ -36,7 +36,7 @@ div#customerForm {
       input.title { width: 82px; }
     }
   }
-  input.submit { margin-left: 680px !important}
+  input.submit { margin-left: 650px !important; }
 }
 
 div.customer {
